Fix spacing issue on contact pg

--- a/default.css
+++ b/default.css
@@ -45,7 +45,7 @@ p {
 }
 
 br h3{
-    float: left;
+    float: right;
     clear: both;
 }
 
